...
              children: [
                Column(
                  crossAxisAlignment: CrossAxisAlignment.start,
                  mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                  children: [
                    _identified(
                      'trash-type-dropdown',
                      DropdownButton<String>(
                        key: Key('trash-type-dropdown'),
                        value: editModel.trash.type,
                        onChanged: (newValue) {
                          if (newValue != null) {
                            editModel.changeTrashType(newValue);
...
                  ),
                ),
                Container(
                  padding: EdgeInsets.only(bottom: 32.0),
                  alignment: Alignment.center,
                  child: _identified(
                    'submit-trash-data',
                    FilledButton(
                      key: Key('submit'),
                      onPressed: editModel.editState == EditState.PROCESSING
                          ? null
                          : () async {
                              if (_formKey.currentState!.validate()) {
...
