...
    [5, 12, 19, 26, 33],
    [6, 13, 20, 27, 34],
  ];

  static final Map<String, String> _trashNameMap = {
    "burn": "もえるゴミ",
    "unburn": "もえないゴミ",
    "plastic": "プラスチック",
    "bin": "ビン",
    "can": "カン",
    "petbottle": "ペットボトル",
    "paper": "古紙",
    "resource": "資源ごみ",
...
