appId: ${APP_ID}
---
- launchApp:
    clearState: true
    permissions:
      notifications: allow
- tapOn:
    text: 許可
    optional: true
- tapOn:
    text: 許可しない
    optional: true
- tapOn:
    text: キャンセル
    optional: true
- assertVisible: ${CURRENT_MONTH_LABEL}
- runFlow: ../common/open_add.yaml
- tapOn:
    id: submit-trash-data
- assertVisible:
    id: calendar-trash-burn
- runFlow: ../common/open_list.yaml
- assertVisible: 登録されているゴミ出し予定
- tapOn:
    text: コピー
- tapOn:
    id: trash-type-dropdown
- tapOn: もえないゴミ
- tapOn:
    id: submit-trash-data
- assertVisible:
    id: trash-list-unburn
